--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Deploy with Salesforce DX</title>
+	<title>Connected App Demo</title>
 	<link rel="stylesheet" type="text/css" href="/dist/assets/styles/salesforce-lightning-design-system.css" />
 	<link rel="stylesheet" type="text/css" href="/dist/p.css" />
 
